[project]
name = "github-mcp-server"
version = "1.0.0"
description = "GitHub Repository Analyzer — MCP Server for Claude Desktop"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pygithub>=2.5.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.41",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "httpx>=0.27.0",
]

[project.scripts]
github-mcp = "server:main"

[tool.uv]
dev-dependencies = []
