[project]
name = "github-mcp-server"
version = "1.0.0"
description = "GitHub Repository Analyzer — MCP Server for Claude Desktop"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "pygithub>=2.5.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.41",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
    "httpx>=0.27.0",
    "fastmcp==2.12.4", # Make sure this is here if you are using 'uv run fastmcp'
]

[project.scripts]
github-mcp = "server:main"

[tool.uv]
# This tells uv to treat this as a simple project, not a library package
package = false

[dependency-groups]
dev = []
